Fix scrollbars on Game Over

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -62,10 +62,12 @@ canvas {
 #game-over-overlay, #game-over, #start-screen, #store-screen {
     position: absolute;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
-    min-height: 100%;
     display: none;
+    overflow: scroll;
 }
 
 #start-screen, #store-screen {
